--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,17 +20,8 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/background_light"
         android:text="@string/btn_playmode_normal"
-        android:layout_alignRight="@id/progress" />
-
-    <TextView
-        android:id="@+id/txt_playmode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/txt_playmode"
-        android:textSize="20sp"
-        android:textColor="@android:color/background_light"
-        android:layout_toLeftOf="@id/btn_playmode"
-        android:layout_alignBaseline="@+id/btn_playmode" />
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/progress" />
 
     <Button
         android:id="@+id/btn_apoint"
@@ -58,5 +49,37 @@
         android:textColor="@android:color/background_light"
         android:layout_below="@id/progress"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/txt_current_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/background_light"
+        android:layout_above="@id/progress"
+        android:layout_alignLeft="@id/progress" />
+
+    <TextView
+        android:id="@+id/txt_duration_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/background_light"
+        android:layout_above="@id/progress"
+        android:layout_alignRight="@id/progress" />
+
+    <TextView
+        android:id="@+id/txt_point_a"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/background_light"
+        android:layout_below="@id/btn_bpoint"
+        android:layout_alignRight="@id/btn_apoint" />
+
+    <TextView
+        android:id="@+id/txt_point_b"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/background_light"
+        android:layout_below="@id/btn_apoint"
+        android:layout_alignLeft="@id/btn_bpoint" />
 
 </RelativeLayout>
