--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,14 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_helps"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_helps"/>
+
+    <item
+        android:id="@+id/action_rate"
+        android:orderInCategory="101"
+        android:showAsAction="never"
+        android:title="@string/action_rate"/>
 
     <item
         android:id="@+id/action_exit"
-        android:orderInCategory="101"
+        android:orderInCategory="102"
         android:showAsAction="never"
         android:title="@string/action_exit"/>
 
